--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
     "framer-motion": "^11.11.10",
+    "google-auth-library": "^9.14.2",
+    "googleapis": "^144.0.0",
     "lucide-react": "^0.453.0",
     "next": "^14.1.0",
+    "next-auth": "^4.24.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
