--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "scrape-youtube": "^2.4.0",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
